# yelo

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum  install.sh  main.go
.claude/: settings.local.json
.claude/commands/: release.md  ship-it.md
.github/workflows/: release.yml
Formula/: yelo.rb
cmd/: buckets.go  cd.go  get.go  helpers.go  helpers_test.go  ls.go  put.go  pwd.go  restore.go  root.go  stat.go  tui.go
doc/: yelo.1
hooks/: pre-push
internal/aws/: client.go  glacier.go  glacier_test.go  transfer.go
internal/config/: config.go
internal/output/: format.go  format_test.go
internal/state/: resolve.go  resolve_test.go  state.go
internal/tui/: progress.go
internal/tui/app/: app.go  commands.go  keys.go  messages.go  model.go  styles.go
scripts/: release.sh
src/: app.rs  aws_ops.rs  cache.rs  cli.rs  config.rs  credentials.rs  daemon.rs  helpers.rs  log.rs  main.rs  output.rs  restore.rs  state.rs  ui.rs
