[package]
license = "MIT OR Apache-2.0"
name = "yelo"
version = "0.6.1"
edition = "2024"

[[bin]]
name = "yelo"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-types = "1"
tokio = { version = "1", features = ["rt", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ratatui-image = { version = "10", default-features = false, features = ["crossterm", "image-defaults"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }

[dev-dependencies]
tempfile = "3"
